tests/reference/asr-kind_star_of_int-3ed778d.stderr
semantic error: Expected initialization expression for kind
 --> tests/errors/kind_star_of_int.f90:3:13
  |
3 |     integer(*) a
  |             ^ 
